# weather-cli

./: Cargo.toml  README.md
src/: args.rs  geocoding.rs  main.rs  weather.rs
